# Fitrah

./: .gitignore  BUILD.bazel  CODE_OF_CONDUCT.md  MODULE.bazel  Makefile  Package.swift  README.md  WORKSPACE
.github/workflows/: deploy_doc_site.yml
App/: BUILD.bazel
App/Source/: ContentView.swift
Modules/: BUILD.bazel
Modules/Azkar/: BUILD.bazel
Modules/Azkar/Source/: AzkarListView.swift
Modules/Azkar/Tests/: AzkarListTests.swift
Tools/: shared.bzl
docs/: .gitignore  app_contribution_guides.md  application_architecture.md  azkar_feature_architecture.md  contribution_guides.md  docs_contribution_guides.md  index.md  package-lock.json  package.json  quick_start.md  team.md
docs/.vitepress/: config.mts
