package_group(
    name = "default_library_visibility",
    includes = [
        # Project generation.
        "@rules_xcodeproj//xcodeproj:generated",
    ],
    packages = [
        # The application package.
        "//App",
        # All other modules.
        "//Modules/...",
    ],
)

package_group(
    name = "default_test_visibility",
    includes = [
        # Project generation.
        "@rules_xcodeproj//xcodeproj:generated",
    ],
)